[package]
name = "mc-be-cursor-centerizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"

[dependencies.windows]
version = "0.32"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging"
]